feat: 프로그레스 기능추가

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <!-- 프로그레스 바 -->
+    <div id="progress-container">
+      <div id="progressBar" class="progress-bar"></div>
+    </div>
+
     <div class="container">
       <div id="step1">
         <h2>대한민국</h2>
@@ -34,7 +39,6 @@
             포항·안동
           </button>
         </div>
-        <br />
         <button class="next-btn" id="nextStep1" onclick="goToStep2()" disabled>
           다음
         </button>
@@ -67,7 +71,6 @@
             애완동물
           </button>
         </div>
-        <br />
         <button class="next-btn" id="nextStep2" onclick="goToStep3()" disabled>
           다음
         </button>
@@ -95,7 +98,6 @@
             5박 6일
           </button>
         </div>
-        <br />
         <button class="next-btn" id="nextStep3" onclick="goToStep4()" disabled>
           다음
         </button>
@@ -146,7 +148,6 @@
             문화·예술·역사
           </button>
         </div>
-        <br />
         <button class="next-btn" id="nextStep4" onclick="goToStep5()">
           다음
         </button>
@@ -164,7 +165,6 @@
             널널한 일정 선호
           </button>
         </div>
-        <br />
         <button class="next-btn" id="nextStep5" onclick="showSelection()">
           결과보기
         </button>
@@ -191,6 +191,44 @@
       let selectedStyle = []; //여행 스타일
       let selectedSchedule = ""; //여행 일정 정도
 
+      let currentStep = 0;
+      const totalSteps = 4; // 총 단계 수
+      let progressWidth = 0;
+
+      // 프로그레스 바를 서서히 차오르게 하는 함수
+      function increaseProgressBar() {
+        const progressBar = document.getElementById("progressBar");
+        const interval = setInterval(function () {
+          if (progressWidth >= (currentStep / totalSteps) * 100) {
+            clearInterval(interval); // 목표값에 도달하면 멈추기
+          } else {
+            progressWidth += 1; // 1씩 증가
+            progressBar.style.width = `${progressWidth}%`;
+          }
+        }, 10); // 10ms마다 증가
+      }
+
+      // 프로그레스 바 업데이트 함수
+      function updateProgressBar() {
+        const progress = (currentStep / totalSteps) * 100; // 현재 단계에 대한 비율 계산
+        document.getElementById("progressBar").style.width = `${progress}%`;
+      }
+
+      function deleteProgressBar() {
+        const progressBar = document.getElementById("progressBar");
+        progressBar.style.width = "100%"; // 먼저 100%로 채우고
+        setTimeout(function () {
+          const interval = setInterval(function () {
+            if (progressBar.style.width === "0%") {
+              clearInterval(interval); // 목표값에 도달하면 멈추기
+            } else {
+              let currentWidth = parseInt(progressBar.style.width);
+              progressBar.style.width = `${currentWidth - 1}%`; // 1%씩 줄어듦
+            }
+          }, 50); // 10ms마다 감소
+        }, 1000); // 1초 후에 프로그레스 바가 사라지기 시작
+      }
+
       //1단계 여행지 선택 변수 저장
       function selectLocation(location) {
         selectedLocation = location;
@@ -206,6 +244,8 @@
         if (selectedLocation) {
           document.getElementById("step1").classList.add("hidden");
           document.getElementById("step2").classList.remove("hidden");
+          currentStep = 1;
+          updateProgressBar();
         }
       }
 
@@ -213,6 +253,8 @@
       function goToStep1() {
         document.getElementById("step2").classList.add("hidden");
         document.getElementById("step1").classList.remove("hidden");
+        currentStep = 0;
+        updateProgressBar();
       }
 
       //2단계 - 동반자 변수를 배열로 중복 저장
@@ -234,6 +276,8 @@
         if (selectedCompanions.length > 0) {
           document.getElementById("step2").classList.add("hidden");
           document.getElementById("step3").classList.remove("hidden");
+          currentStep = 2;
+          updateProgressBar();
         }
       }
 
@@ -241,6 +285,8 @@
       function goToStep2FromStep3() {
         document.getElementById("step3").classList.add("hidden");
         document.getElementById("step2").classList.remove("hidden");
+        currentStep = 1;
+        updateProgressBar();
       }
 
       //3단계 - 기간을 정하기
@@ -258,6 +304,8 @@
         if (selectedDuration) {
           document.getElementById("step3").classList.add("hidden");
           document.getElementById("step4").classList.remove("hidden");
+          currentStep = 3;
+          updateProgressBar();
         }
       }
 
@@ -265,6 +313,8 @@
       function goToStep3FromStep4() {
         document.getElementById("step4").classList.add("hidden");
         document.getElementById("step3").classList.remove("hidden");
+        currentStep = 2;
+        updateProgressBar();
       }
 
       // 4단계 - 여행 스타일 선택 함수 (다중 선택 가능)
@@ -286,6 +336,8 @@
         if (selectedStyle.length > 0) {
           document.getElementById("step4").classList.add("hidden");
           document.getElementById("step5").classList.remove("hidden");
+          currentStep = 4;
+          updateProgressBar();
         }
       }
 
@@ -293,9 +345,11 @@
       function goToStep4FromStep5() {
         document.getElementById("step5").classList.add("hidden");
         document.getElementById("step4").classList.remove("hidden");
+        currentStep = 3;
+        updateProgressBar();
       }
 
-      // 여행 일정 선택 함수
+      // 5단계 - 여행 일정 선택 함수
       function selectSchedule(schedule) {
         selectedSchedule = schedule;
         document
@@ -308,6 +362,11 @@
       function goToStep1FromStep6() {
         document.getElementById("step6").classList.add("hidden");
         document.getElementById("step1").classList.remove("hidden");
+        document
+          .getElementById("progress-container")
+          .classList.remove("hidden");
+        currentStep = 0;
+        updateProgressBar();
       }
 
       async function callGeminiAPI() {
@@ -337,6 +396,7 @@
 
       // 5단계에서 결과보기
       function showSelection() {
+        deleteProgressBar();
         callGeminiAPI().then((reply) => {
           const resultText = document.getElementById("resultText");
 
@@ -358,36 +418,11 @@
           });
 
           // 결과 화면으로 이동
+          document.getElementById("progress-container").classList.add("hidden");
           document.getElementById("step5").classList.add("hidden");
           document.getElementById("step6").classList.remove("hidden");
         });
       }
-
-      // function showSelection() {
-      //   callGeminiAPI().then((reply) => {
-      //     const resultContainer = document.getElementById("resultContainer");
-      //     const resultText = document.getElementById("resultText");
-
-      //     resultText.innerHTML = ""; // 기존 내용 초기화
-      //     const lines = reply.split("\n"); // 줄바꿈 기준으로 데이터 분리
-
-      //     let currentDay = "";
-      //     lines.forEach((line) => {
-      //       if (line.startsWith("Day")) {
-      //         currentDay = document.createElement("div");
-      //         currentDay.classList.add("day-title");
-      //         currentDay.textContent = line;
-      //         resultText.appendChild(currentDay);
-      //       } else {
-      //         const p = document.createElement("p");
-      //         p.textContent = line;
-      //         resultText.appendChild(p);
-      //       }
-      //     });
-
-      //     result.style.display = "block";
-      //   });
-      // }
     </script>
   </body>
 </html>
