구글API 지도 연동테스트, 프롬프트 수정

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>여행 계획</title>
     <link rel="stylesheet" href="./style.css" />
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtxMdg_6qYFtctFC7OXcYILL3j3JLAFno&callback=initMap" async defer></script>
   </head>
   <body>
     <!-- 프로그레스 바 -->
@@ -183,246 +184,6 @@
       <h2>여행 계획 결과</h2>
       <div id="resultText"></div>
     </div>
-
-    <script>
-      let selectedLocation = ""; //지역선택
-      let selectedCompanions = []; //동반자
-      let selectedDuration = ""; //기간
-      let selectedStyle = []; //여행 스타일
-      let selectedSchedule = ""; //여행 일정 정도
-
-      let currentStep = 0;
-      const totalSteps = 4; // 총 단계 수
-      let progressWidth = 0;
-
-      // 프로그레스 바를 서서히 차오르게 하는 함수
-      function increaseProgressBar() {
-        const progressBar = document.getElementById("progressBar");
-        const interval = setInterval(function () {
-          if (progressWidth >= (currentStep / totalSteps) * 100) {
-            clearInterval(interval); // 목표값에 도달하면 멈추기
-          } else {
-            progressWidth += 1; // 1씩 증가
-            progressBar.style.width = `${progressWidth}%`;
-          }
-        }, 10); // 10ms마다 증가
-      }
-
-      // 프로그레스 바 업데이트 함수
-      function updateProgressBar() {
-        const progress = (currentStep / totalSteps) * 100; // 현재 단계에 대한 비율 계산
-        document.getElementById("progressBar").style.width = `${progress}%`;
-      }
-
-      function deleteProgressBar() {
-        const progressBar = document.getElementById("progressBar");
-        progressBar.style.width = "100%"; // 먼저 100%로 채우고
-        setTimeout(function () {
-          const interval = setInterval(function () {
-            if (progressBar.style.width === "0%") {
-              clearInterval(interval); // 목표값에 도달하면 멈추기
-            } else {
-              let currentWidth = parseInt(progressBar.style.width);
-              progressBar.style.width = `${currentWidth - 1}%`; // 1%씩 줄어듦
-            }
-          }, 50); // 10ms마다 감소
-        }, 1000); // 1초 후에 프로그레스 바가 사라지기 시작
-      }
-
-      //1단계 여행지 선택 변수 저장
-      function selectLocation(location) {
-        selectedLocation = location;
-        document
-          .querySelectorAll("#step1 .btn")
-          .forEach((btn) => btn.classList.remove("selected"));
-        event.target.classList.add("selected");
-        document.getElementById("nextStep1").disabled = false;
-      }
-
-      //2단계로 가기 - 동반자 선택
-      function goToStep2() {
-        if (selectedLocation) {
-          document.getElementById("step1").classList.add("hidden");
-          document.getElementById("step2").classList.remove("hidden");
-          currentStep = 1;
-          updateProgressBar();
-        }
-      }
-
-      //1단계로 돌아가기 - 여행지 선택으로
-      function goToStep1() {
-        document.getElementById("step2").classList.add("hidden");
-        document.getElementById("step1").classList.remove("hidden");
-        currentStep = 0;
-        updateProgressBar();
-      }
-
-      //2단계 - 동반자 변수를 배열로 중복 저장
-      function selectedCompanion(companion) {
-        const index = selectedCompanions.indexOf(companion);
-        if (index > -1) {
-          selectedCompanions.splice(index, 1);
-          event.target.classList.remove("selected");
-        } else {
-          selectedCompanions.push(companion);
-          event.target.classList.add("selected");
-        }
-        document.getElementById("nextStep2").disabled =
-          selectedCompanions.length === 0;
-      }
-
-      //3단계로 이동가기
-      function goToStep3() {
-        if (selectedCompanions.length > 0) {
-          document.getElementById("step2").classList.add("hidden");
-          document.getElementById("step3").classList.remove("hidden");
-          currentStep = 2;
-          updateProgressBar();
-        }
-      }
-
-      //2단계로 돌아가기
-      function goToStep2FromStep3() {
-        document.getElementById("step3").classList.add("hidden");
-        document.getElementById("step2").classList.remove("hidden");
-        currentStep = 1;
-        updateProgressBar();
-      }
-
-      //3단계 - 기간을 정하기
-      function selectDuration(duration) {
-        selectedDuration = duration;
-        document
-          .querySelectorAll("#step3 .btn")
-          .forEach((btn) => btn.classList.remove("selected"));
-        event.target.classList.add("selected");
-        document.getElementById("nextStep3").disabled = false;
-      }
-
-      //4단계로 이동
-      function goToStep4() {
-        if (selectedDuration) {
-          document.getElementById("step3").classList.add("hidden");
-          document.getElementById("step4").classList.remove("hidden");
-          currentStep = 3;
-          updateProgressBar();
-        }
-      }
-
-      //3단계로 돌아오기
-      function goToStep3FromStep4() {
-        document.getElementById("step4").classList.add("hidden");
-        document.getElementById("step3").classList.remove("hidden");
-        currentStep = 2;
-        updateProgressBar();
-      }
-
-      // 4단계 - 여행 스타일 선택 함수 (다중 선택 가능)
-      function selectStyle(style) {
-        const index = selectedStyle.indexOf(style);
-        if (index > -1) {
-          selectedStyle.splice(index, 1);
-          event.target.classList.remove("selected");
-        } else {
-          selectedStyle.push(style);
-          event.target.classList.add("selected");
-        }
-        document.getElementById("nextStep4").disabled =
-          selectedStyle.length === 0;
-      }
-
-      // 5단계로 이동
-      function goToStep5() {
-        if (selectedStyle.length > 0) {
-          document.getElementById("step4").classList.add("hidden");
-          document.getElementById("step5").classList.remove("hidden");
-          currentStep = 4;
-          updateProgressBar();
-        }
-      }
-
-      // 4단계로 이동
-      function goToStep4FromStep5() {
-        document.getElementById("step5").classList.add("hidden");
-        document.getElementById("step4").classList.remove("hidden");
-        currentStep = 3;
-        updateProgressBar();
-      }
-
-      // 5단계 - 여행 일정 선택 함수
-      function selectSchedule(schedule) {
-        selectedSchedule = schedule;
-        document
-          .querySelectorAll("#step5 .btn")
-          .forEach((btn) => btn.classList.remove("selected"));
-        event.target.classList.add("selected");
-      }
-
-      // 6단계에서 1단계로 돌아가기
-      function goToStep1FromStep6() {
-        document.getElementById("step6").classList.add("hidden");
-        document.getElementById("step1").classList.remove("hidden");
-        document
-          .getElementById("progress-container")
-          .classList.remove("hidden");
-        currentStep = 0;
-        updateProgressBar();
-      }
-
-      async function callGeminiAPI() {
-        const response = await fetch(
-          "https://productive-majestic-olivine.glitch.me/1",
-          {
-            method: "POST",
-            body: JSON.stringify({
-              text: `너는 여행 계획 전문가야. 나는 지금 여행을 가고 싶은데, 다음과 같은 조건들이 있어:
-                    1. 여행지는 ${selectedLocation}로 정했어.
-                    2. 동반자는 ${selectedCompanions.join(", ")}와 함께 갈 거야.
-                    3. 여행 기간은 ${selectedDuration}로 계획하고 있어.
-                    4. 내가 선호하는 여행 스타일은 ${selectedStyle.join(
-                      ", "
-                    )}야.
-                    5. 여행 일정은 ${selectedSchedule} 정도로 하고 싶어.
-                    이 조건들을 바탕으로 여행 일정을 Day 1, Day 2 식으로 나누어 추천해주고 절대 마크다운 형식으로 보여주지마.`,
-            }),
-            headers: {
-              "Content-Type": "application/json",
-            },
-          }
-        );
-        const json = await response.json();
-        return json.reply;
-      }
-
-      // 5단계에서 결과보기
-      function showSelection() {
-        deleteProgressBar();
-        callGeminiAPI().then((reply) => {
-          const resultText = document.getElementById("resultText");
-
-          resultText.innerHTML = ""; // 기존 내용 초기화
-          const lines = reply.split("\n"); // 줄바꿈 기준으로 데이터 분리
-
-          let currentDay = "";
-          lines.forEach((line) => {
-            if (line.startsWith("Day")) {
-              currentDay = document.createElement("div");
-              currentDay.classList.add("day-title");
-              currentDay.textContent = line;
-              resultText.appendChild(currentDay);
-            } else {
-              const p = document.createElement("p");
-              p.textContent = line;
-              resultText.appendChild(p);
-            }
-          });
-
-          // 결과 화면으로 이동
-          document.getElementById("progress-container").classList.add("hidden");
-          document.getElementById("step5").classList.add("hidden");
-          document.getElementById("step6").classList.remove("hidden");
-        });
-      }
-    </script>
+    <script src="./app.js"></script>
   </body>
 </html>
